# torch-tfm-test

./: .gitignore  image_test.py  load_test.py  mnist.py  mnist_load.py  mnist_model.py  mnist_train.py  pyproject.toml  simple_wave.py  simple_wave_load.py  simple_wave_model.py  simple_wave_train.py  test.py  tf.py  tf_test.py  vtf.py
